Also set step id

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -42,4 +42,5 @@ jobs:
         with:
           path: 'target/doc'
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v1
