--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,25 +1,10 @@
 ---
 name: Pages
-on:
-  push:
-    branches:
-      - master
-      - dev
-
-permissions:
-  pages: write
-  id-token: write
+on: push
 
 jobs:
-  deploy:
-    if: github.ref == 'refs/heads/master'
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -35,6 +20,19 @@ jobs:
       - name: Build Documentation
         run: cargo doc --all --no-deps
 
+  deploy:
+    if: github.ref == 'refs/heads/master'
+    needs: build
+    runs-on: ubuntu-latest
+
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact to Pages
