--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,20 +16,8 @@ jobs:
           profile: minimal
           override: true
           components: rustfmt, rust-src
-
       - name: Build Documentation
-        run: cargo doc --all --no-deps
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
-      - name: check files
-        run: |
-          set -x
-          ls -lA
-      - name: Upload artifact to Pages
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: 'target/doc'
+        run: cargo +nightly doc --workspace --no-deps
 
   deploy:
     if: github.ref == 'refs/heads/master'
@@ -44,6 +32,12 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+      - name: Upload artifact to Pages
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: 'target/doc'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
