--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -10,17 +10,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@nightly
         with:
-          toolchain: nightly
-          profile: minimal
-          override: true
-          components: rustfmt, rust-src
+          components: rustfmt, rust-src, clippy
       - name: Build Documentation
         run: |
           # Needed for `enable-index-page` for workspace
-          RUSTDOCFLAGS="--enable-index-page -Zunstable-options" \
-            cargo +nightly doc --workspace --no-deps
+          RUSTDOCFLAGS="--enable-index-page -Zunstable-options" RUSTUP_TOOLCHAIN=nightly \
+            cargo doc --workspace --no-deps
       - name: Upload artifact to Pages
         uses: actions/upload-pages-artifact@v1
         with:
