Refactor to check docs in separate job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,7 @@
 ---
-name: CI  # Continuous Integration
-
+name: CI
 on:
   push:
-    branches:
-      - master
-      - dev
   pull_request:
 
 jobs:
