--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build Documentation
         # Needed for `enable-index-page` for workspace
         env:
-          RUSTDOCFLAGS: --enable-index-page -Zunstable-options
+          RUSTDOCFLAGS: --enable-index-page -Zunstable-options -D warnings
           RUSTUP_TOOLCHAIN: nightly
         run: |
           cargo doc \
